testfx/errors/error_tests/edge_01_invalid_keyword.fx
// 测试: 使用非 FLYUX 的关键字 I>
x := 10
I> (3) {
    println(x)
}
